--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  field_a: 1
-  field_b: MyString
-  field_c: MyString
+  city: MyString
+  country: MyString
 
 two:
-  field_a: 1
-  field_b: MyString
-  field_c: MyString
+  city: MyString
+  country: MyString
